--- a/Latex/DES_Break_write_up.tex
+++ b/Latex/DES_Break_write_up.tex
@@ -23,7 +23,1179 @@ The C++ POSIX thread, or \texttt{pthread}, library was used for implementing the
 
 
 \section{Code (C++)}
+\subsection{DESBreakConst.h}
 \begin{verbatim}
+#include <vector>
+#include <string>
+#include <cmath>
+
+
+const int PORT_NO = 3000;
+const int MAX_LINE = 4096;
+const int CLIENT_COUNT = 5;
+
+\end{verbatim}
+
+\subsection{DESCipher.h}
+\begin{verbatim}
+/*
+CS 455 - Project Part 1 - DES Implementation
+Brandon Crane, Monica Singh, & George Wood
+10/31/17
+*/
+
+#include <string>
+#include <vector>
+
+//Number of characters in each block of input text being processed
+const short CHARS_IN_BLOCK = 8;
+//Number of bits in a char variable
+const short BITS_IN_CHAR = 8;
+//Number of rounds the algorithm should operate for
+const short ROUND_COUNT = 16;
+
+class DESCipher
+{
+  private:
+    //IP Table, takes in vector of size 64, permutes it, and modifies
+    //left and right vectors passed by reference to give plaintext halves
+    void initPerm(std::vector<bool> inputVector, std::vector<bool>& leftText,
+      std::vector<bool>& rightText);
+
+    //Inverse IP table, takes in vector of booleans of size 64 and returns
+    //its permutation
+    std::vector<bool> invInitPerm(std::vector<bool> inputVector);
+
+    //PC1 Table, takes in vector of size 64, permutes it to size 56, and modifies
+    //halves passed by reference to give initial key halves
+    void pc1Perm(std::vector<bool> keyBits, std::vector<bool>& leftKey,
+      std::vector<bool>& rightKey);
+
+    //Key shift scheduler, takes in key halves and shifts them by a specified
+    //number of bits based on the current round of encryption
+    std::vector<bool> leftShiftSched(std::vector<bool> inputVector, short round);
+
+    //PC2 Table, takes in key halves vectors of size 28 each, permutes them,
+    //and returns a combined permuted key vector
+    std::vector<bool> pc2Perm(std::vector<bool> leftKey, std::vector<bool> rightKey);
+
+    //Takes in a vector of size 32, expands and permutes it with a hard-coded table,
+    //and returns a vector of size 48
+    std::vector<bool> eTablePerm(std::vector<bool> inputVector);
+
+    //S Boxes, takes in vector of the right half of the plaintext of size 48
+    //and returns a permuted and substituted vector of length 32
+    std::vector<bool> sBoxSub(std::vector<bool> rightTextI);
+
+    //Takes in vector of size 32, permutes it using a hard-coded table,
+    //and returns another vector of size 32
+    std::vector<bool> pTablePerm(std::vector<bool> inputVector);
+
+  public:
+    DESCipher();
+
+    //Converts characters to bits and places them in a vector of bools
+    static std::vector<bool> charsToBits(std::vector<char> inputVector);
+
+    //Converts bits to chars and appends them to a string
+    static std::string bitsToChars(std::vector<bool> inputVector);
+
+    //Takes in a size 64 vector of booleans for both plaintext and the key
+    //and performs DES encryption on them. Returns string of ciphertext for the
+    //input block of plaintext
+    std::string encrypt(std::vector<bool> plainTextBits, std::vector<bool> keyBits);
+
+    //Takes in a size 64 vector of booleans for both plaintext and the key
+    //and performs DES decryption on them. Returns string of plaintext for the
+    //input block of ciphertext
+    std::string decrypt(std::vector<bool> cipherTextBits, std::vector<bool> keyBits);
+};
+\end{verbatim}
+
+\subsection{pthread_barrier.h}
+\begin{verbatim}
+#ifdef __APPLE__
+
+#ifndef PTHREAD_BARRIER_H_
+#define PTHREAD_BARRIER_H_
+
+#include <pthread.h>
+#include <errno.h>
+
+typedef int pthread_barrierattr_t;
+typedef struct
+{
+    pthread_mutex_t mutex;
+    pthread_cond_t cond;
+    int count;
+    int tripCount;
+} pthread_barrier_t;
+
+
+int pthread_barrier_init(pthread_barrier_t *barrier, const pthread_barrierattr_t *attr, unsigned int count)
+{
+    if(count == 0)
+    {
+        errno = EINVAL;
+        return -1;
+    }
+    if(pthread_mutex_init(&barrier->mutex, 0) < 0)
+    {
+        return -1;
+    }
+    if(pthread_cond_init(&barrier->cond, 0) < 0)
+    {
+        pthread_mutex_destroy(&barrier->mutex);
+        return -1;
+    }
+    barrier->tripCount = count;
+    barrier->count = 0;
+
+    return 0;
+}
+
+int pthread_barrier_destroy(pthread_barrier_t *barrier)
+{
+    pthread_cond_destroy(&barrier->cond);
+    pthread_mutex_destroy(&barrier->mutex);
+    return 0;
+}
+
+int pthread_barrier_wait(pthread_barrier_t *barrier)
+{
+    pthread_mutex_lock(&barrier->mutex);
+    ++(barrier->count);
+    if(barrier->count >= barrier->tripCount)
+    {
+        barrier->count = 0;
+        pthread_cond_broadcast(&barrier->cond);
+        pthread_mutex_unlock(&barrier->mutex);
+        return 1;
+    }
+    else
+    {
+        pthread_cond_wait(&barrier->cond, &(barrier->mutex));
+        pthread_mutex_unlock(&barrier->mutex);
+        return 0;
+    }
+}
+
+#endif // PTHREAD_BARRIER_H_
+#endif // __APPLE__
+
+\end{verbatim}
+
+\subsection{DESCipher.cpp}
+\begin{verbatim}
+/*
+CS 455 - Project Part 1 - DES Implementation
+Brandon Crane, Monica Singh, & George Wood
+10/31/17
+*/
+
+#include <iostream>
+#include <fstream>
+#include <bitset>
+#include <time.h>
+#include "DESCipher.h"
+using namespace std;
+
+DESCipher::DESCipher()
+{
+
+}
+
+//IP Table, takes in vector of size 64, permutes it, and modifies
+//left and right vectors passed by reference to give plaintext halves
+void DESCipher::initPerm(vector<bool> inputVector, vector<bool>& leftText,
+  vector<bool>& rightText)
+{
+  short outputVectorSize = 64;
+  //IP table stored as an array
+  short initPerm[] = {58,50,42,34,26,18,10,2,
+                      60,52,44,36,28,20,12,4,
+                      62,54,46,38,30,22,14,6,
+                      64,56,48,40,32,24,16,8,
+                      57,49,41,33,25,17,9, 1,
+                      59,51,43,35,27,19,11,3,
+                      61,53,45,37,29,21,13,5,
+                      63,55,47,39,31,23,15,7};
+  //Vector to store permuted values
+  vector<bool> permVec;
+  //Pushes permuted values into permVec
+  for(short i=0; i < outputVectorSize; i++)
+  {
+    permVec.push_back(inputVector.at(initPerm[i]-1));
+  }
+  //First half of permuted values pushed to the leftText vector
+  for (unsigned short i = 0; i < permVec.size() / 2; i++)
+  {
+    leftText.push_back(permVec.at(i));
+  }
+  //Second half of permuted values pushed to the rightText vector
+  for (unsigned short i = permVec.size() / 2; i < permVec.size(); i++)
+  {
+    rightText.push_back(permVec.at(i));
+  }
+}
+
+//Inverse IP table, takes in vector of booleans of size 64 and returns
+//its permutation
+vector<bool> DESCipher::invInitPerm(vector<bool> inputVector)
+{
+  short outputVectorSize = 64;
+  //Inverse IP tables stored as an array
+  short invInitPerm[] = {40,8,48,16,56,24,64,32,
+                         39,7,47,15,55,23,63,31,
+                         38,6,46,14,54,22,62,30,
+                         37,5,45,13,53,21,61,29,
+                         36,4,44,12,52,20,60,28,
+                         35,3,43,11,51,19,59,27,
+                         34,2,42,10,50,18,58,26,
+                         33,1,41,9,49,17,57,25};
+  //Vector of bools to be returned
+  vector<bool> outputVector;
+  //Pushes permuted values to outputVector
+  for(short i=0; i < outputVectorSize; i++)
+  {
+    outputVector.push_back(inputVector.at(invInitPerm[i]-1));
+  }
+  return outputVector;
+}
+
+//PC1 Table, takes in vector of size 64, permutes it to size 56, and modifies
+//halves passed by reference to give initial key halves
+void DESCipher::pc1Perm(vector<bool> keyBits, vector<bool>& leftKey,
+  vector<bool>& rightKey)
+{
+  short pcOneSize = 56;
+  //PC-1 table stored as array
+  short pcOne[]= {57,49,41,33,25,17,9,
+                  1, 58,50,42,34,26,18,
+                  10,2, 59,51,43,35,27,
+                  19,11,3, 60,52,44,36,
+                  63,55,47,39,31,23,15,
+                  7, 62,54,46,38,30,22,
+                  14,6, 61,53,45,37,29,
+                  21,13,5, 28,20,12,4};
+  //Pushes first half of permuted values to leftKey
+  for(short i = 0; i < pcOneSize / 2; i++)
+  {
+    leftKey.push_back(keyBits.at(pcOne[i]-1));
+  }
+  //Pushes second half of permuted values to rightKey
+  for(short i = pcOneSize / 2; i < pcOneSize; i++)
+  {
+    rightKey.push_back(keyBits.at(pcOne[i]-1));
+  }
+}
+
+//Key shift scheduler, takes in key halves and shifts them by a specified
+//number of bits based on the current round of encryption
+vector<bool> DESCipher::leftShiftSched(vector<bool> inputVector, short round)
+{
+  //Left shift schedule stored as array
+  short schedule[] = {1,1,2,2,2,2,2,2,1,2,2,2,2,2,2,1};
+  //Vector of bools to be returned
+  vector<bool> outputVector;
+  //The following two for loops perform the left shift
+  for (unsigned short i = schedule[round]; i < inputVector.size(); i++ )
+  {
+    outputVector.push_back(inputVector.at(i));
+  }
+  for(short i = 0; i < schedule[round]; i++)
+  {
+    outputVector.push_back(inputVector.at(i));
+  }
+  return outputVector;
+}
+
+//PC2 Table, takes in key halves vectors of size 28 each, permutes them,
+//and returns a combined permuted key vector
+vector<bool> DESCipher::pc2Perm(vector<bool> leftKey, vector<bool> rightKey)
+{
+  //Key made up of the two half keys
+  vector<bool> combinedKey = leftKey;
+  combinedKey.insert(combinedKey.end(), rightKey.begin(), rightKey.end());
+
+  short pcTwoSize = 48;
+  //PC-2 table stored as array
+  short pcTwo[]= {14,17,11,24,1, 5, 3, 28,
+                  15,6, 21,10,23,19,12,4,
+                  26,8, 16,7, 27,20,13,2,
+                  41,52,31,37,47,55,30,40,
+                  51,45,33,48,44,49,39,56,
+                  34,53,46,42,50,36,29,32};
+  //Vector of bools to be returned
+  vector<bool> outputVector;
+  //Pushes permuted values to outputVector
+  for(short i=0; i<pcTwoSize; i++)
+  {
+    outputVector.push_back(combinedKey.at(pcTwo[i]-1));
+  }
+  return outputVector;
+}
+
+//Takes in a vector of size 32, expands and permutes it with a hard-coded table,
+//and returns a vector of size 48
+vector<bool> DESCipher::eTablePerm(vector<bool> inputVector)
+{
+  short outputVectorSize = 48;
+  //E table stored as array
+  short eTable[] = {32,1, 2, 3, 4, 5,
+                    4, 5, 6, 7, 8, 9,
+                    8, 9, 10,11,12,13,
+                    12,13,14,15,16,17,
+                    16,17,18,19,20,21,
+                    20,21,22,23,24,25,
+                    24,25,26,27,28,29,
+                    28,29,30,31,32,1};
+  //Vector of bools to be returned
+  vector<bool> outputVector;
+  //Pushes permuted values to outputVector
+  for (short i = 0; i < outputVectorSize; i++)
+  {
+    outputVector.push_back(inputVector.at(eTable[i] - 1));
+  }
+  return outputVector;
+}
+
+//S Boxes, takes in vector of the right half of the plaintext of size 48
+//and returns a permuted and substituted vector of length 32
+vector<bool> DESCipher::sBoxSub(vector<bool> rightTextI)
+{
+  //Number of groups of to be applied to the S boxes
+  short bitGroupCount = 8;
+  //Number of bits in each group
+  short bitsInGroup = 6;
+  //Vector of S boxes
+  vector<vector<vector<short>>> sBoxes;
+  //Temp vectors used to create S boxes
+  vector<short> tempRow;
+  vector<vector<short>> tempBox;
+
+  //S Box 1
+  tempRow = {14, 4, 13, 1, 2, 15, 11, 8, 3, 10, 6, 12, 5, 9, 0, 7};
+  tempBox.push_back(tempRow);
+  tempRow = {0, 15, 7, 4, 14, 2, 13, 1, 10, 6, 12, 11, 9, 5, 3, 8};
+  tempBox.push_back(tempRow);
+  tempRow = {4, 1, 14, 8, 13, 6, 2, 11, 15, 12, 9, 7, 3, 10, 5, 0};
+  tempBox.push_back(tempRow);
+  tempRow = {15, 12, 8, 2, 4, 9, 1, 7, 5, 11, 3, 14, 10, 0, 6, 13};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+  tempBox.clear();
+
+  ////S Box 2
+  tempRow = {15, 1, 8, 14, 6, 11, 3, 4, 9, 7, 2, 13, 12, 0, 5, 10};
+  tempBox.push_back(tempRow);
+  tempRow = {3, 13, 4, 7, 15, 2, 8, 14, 12, 0, 1, 10, 6, 9, 11, 5};
+  tempBox.push_back(tempRow);
+  tempRow = {0, 14, 7, 11, 10, 4, 13, 1, 5, 8, 12, 6, 9, 3, 2, 15};
+  tempBox.push_back(tempRow);
+  tempRow = {13, 8, 10, 1, 3, 15, 4, 2, 11, 6, 7, 12, 0, 5, 14, 9};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+  tempBox.clear();
+
+  //S Box 3
+  tempRow = {10, 0, 9, 14, 6, 3, 15, 5, 1, 13, 12, 7, 11, 4, 2, 8};
+  tempBox.push_back(tempRow);
+  tempRow = {13, 7, 0, 9, 3, 4, 6, 10, 2, 8, 5, 14, 12, 11, 15, 1};
+  tempBox.push_back(tempRow);
+  tempRow = {13, 6, 4, 9, 8, 15, 3, 0, 11, 1, 2, 12, 5, 10, 14, 7};
+  tempBox.push_back(tempRow);
+  tempRow = {1, 10, 13, 0, 6, 9, 8, 7, 4, 15, 14, 3, 11, 5, 2, 12};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+  tempBox.clear();
+
+  //S Box 4
+  tempRow = {7, 13, 14, 3, 0, 6, 9, 10, 1, 2, 8, 5, 11, 12, 4, 15};
+  tempBox.push_back(tempRow);
+  tempRow = {13, 8, 11, 5, 6, 15, 0, 3, 4, 7, 2, 12, 1, 10, 14, 9};
+  tempBox.push_back(tempRow);
+  tempRow = {10, 6, 9, 0, 12, 11, 7, 13, 15, 1, 3, 14, 5, 2, 8, 4};
+  tempBox.push_back(tempRow);
+  tempRow = {3, 15, 0, 6, 10, 1, 13, 8, 9, 4, 5, 11, 12, 7, 2, 14};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+  tempBox.clear();
+
+  //S Box 5
+  tempRow = {2, 12, 4, 1, 7, 10, 11, 6, 8, 5, 3, 15, 13, 0, 14, 9};
+  tempBox.push_back(tempRow);
+  tempRow = {14, 11, 2, 12, 4, 7, 13, 1, 5, 0, 15, 10, 3, 9, 8, 6};
+  tempBox.push_back(tempRow);
+  tempRow = {4, 2, 1, 11, 10, 13, 7, 8, 15, 9, 12, 5, 6, 3, 0, 14};
+  tempBox.push_back(tempRow);
+  tempRow = {11, 8, 12, 7, 1, 14, 2, 13, 6, 15, 0, 9, 10, 4, 5, 3};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+  tempBox.clear();
+
+  //S Box 6
+  tempRow = {12, 1, 10, 15, 9, 2, 6, 8, 0, 13, 3, 4, 14, 7, 5, 11};
+  tempBox.push_back(tempRow);
+  tempRow = {10, 15, 4, 2, 7, 12, 9, 5, 6, 1, 13, 14, 0, 11, 3, 8};
+  tempBox.push_back(tempRow);
+  tempRow = {9, 14, 15, 5, 2, 8, 12, 3, 7, 0, 4, 10, 1, 13, 11, 6};
+  tempBox.push_back(tempRow);
+  tempRow = {4, 3, 2, 12, 9, 5, 15, 10, 11, 14, 1, 7, 6, 0, 8, 13};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+  tempBox.clear();
+
+  //S Box 7
+  tempRow = {4, 11, 2, 14, 15, 0, 8, 13, 3, 12, 9, 7, 5, 10, 6, 1};
+  tempBox.push_back(tempRow);
+  tempRow = {13, 0, 11, 7, 4, 9, 1, 10, 14, 3, 5, 12, 2, 15, 8, 6};
+  tempBox.push_back(tempRow);
+  tempRow = {1, 4, 11, 13, 12, 3, 7, 14, 10, 15, 6, 8, 0, 5, 9, 2};
+  tempBox.push_back(tempRow);
+  tempRow = {6, 11, 13, 8, 1, 4, 10, 7, 9, 5, 0, 15, 14, 2, 3, 12};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+  tempBox.clear();
+
+  //S Box 8
+  tempRow = {13, 2, 8, 4, 6, 15, 11, 1, 10, 9, 3, 14, 5, 0, 12, 7};
+  tempBox.push_back(tempRow);
+  tempRow = {1, 15, 13, 8, 10, 3, 7, 4, 12, 5, 6, 11, 0, 14, 9, 2};
+  tempBox.push_back(tempRow);
+  tempRow = {7, 11, 4, 1, 9, 12, 14, 2, 0, 6, 10, 13, 15, 3, 5, 8};
+  tempBox.push_back(tempRow);
+  tempRow = {15, 12, 8, 2, 4, 9, 1, 7, 5, 11, 3, 14, 10, 0, 6, 13};
+  tempBox.push_back(tempRow);
+  sBoxes.push_back(tempBox);
+
+  //Vector to hold
+  vector<vector<bool>> bitGroups;
+  //Vector of bools to be returned
+  vector<bool> outputVector;
+  //Loads vectors of bools into bitGroups to represent each group of bits
+  for(short i=0; i < bitGroupCount; i++)
+  {
+    vector<bool> temp;
+    for(short j = 0; j < bitsInGroup; j++)
+    {
+      temp.push_back(rightTextI.at((i * bitsInGroup) + j));
+    }
+    bitGroups.push_back(temp);
+  }
+
+  //Applies an S box to each bit group
+  for(short j = 0; j < bitGroupCount; j++)
+  {
+    //Number of bits that will be in each group after S box application
+    short outputBitCount = 4;
+    //String representing row of S box to be used
+    string rowString;
+    //String representing column of S box to be used
+    string colString;
+
+    //Gets row value in binary
+    rowString.append(bitGroups.at(j).at(0) ? "1" : "0");
+    rowString.append(bitGroups.at(j).at(bitsInGroup - 1) ? "1" : "0");
+    //Gets column value in binary
+    for(short i = 1; i <5; i++)
+    {
+      colString.append(bitGroups.at(j).at(i) ? "1" : "0");
+    }
+    //Bitsets to convert the row and column values to decimal
+    bitset<2> row (rowString);
+    bitset<4> col (colString);
+    //Gets the value that each bit group will be replaced with
+    bitset<4> newBinary(sBoxes.at(j).at(row.to_ulong()).at(col.to_ulong()));
+    //Pushes the new binary value of the current group to outputVector
+    for(short i = outputBitCount - 1; i >= 0; i--)
+    {
+      outputVector.push_back(newBinary[i]);
+    }
+  }
+  return outputVector;
+}
+
+//Takes in vector of size 32, permutes it using a hard-coded table,
+//and returns another vector of size 32
+vector<bool> DESCipher::pTablePerm(vector<bool> inputVector)
+{
+  short outputVectorSize = 32;
+  //P table stored as vector
+  short pTable[] = {16,7, 20,21,29,12,28,17,
+                    1, 15,23,26,5, 18,31,10,
+                    2, 8, 24,14,32,27,3, 9,
+                    19,13,30,6, 22,11,4,25};
+  //Vector of bools to be returned
+  vector<bool> outputVector;
+  //Pushes permuted values to outputVector
+  for (short i = 0; i < outputVectorSize; i++)
+  {
+    outputVector.push_back(inputVector.at(pTable[i] - 1));
+  }
+  return outputVector;
+}
+
+//Converts characters to bits and places them in a vector of bools
+vector<bool> DESCipher::charsToBits(vector<char> inputVector)
+{
+  vector<bool> outputVector;
+  for (short i = 0; i < CHARS_IN_BLOCK; i++)
+  {
+    bitset<BITS_IN_CHAR> temp(inputVector.at(i));
+    for(short j = BITS_IN_CHAR - 1; j >= 0; j--)
+    {
+      outputVector.push_back(temp[j]);
+    }
+  }
+  return outputVector;
+}
+
+//Converts bits to chars and appends them to a string
+string DESCipher::bitsToChars(vector<bool> inputVector)
+{
+  //Output string of converted binary values to be returned
+  string outputText = "";
+  //Loops for each character in the block
+  for (short i = 0; i < CHARS_IN_BLOCK; i++)
+  {
+    //String to hold the binary of the current character
+    string tempString = "";
+    //Adds bits for current character to string
+    for (short j = 0; j < BITS_IN_CHAR; j++)
+    {
+      tempString += (inputVector.at((i * CHARS_IN_BLOCK) + j) ? "1" : "0");
+    }
+    //Puts bits in a bitset
+    bitset<BITS_IN_CHAR> temp(tempString);
+    //Adds converted character to the output text
+    outputText += (char)temp.to_ulong();
+  }
+  return outputText;
+}
+
+//Takes in a size 64 vector of booleans for both plaintext and the key
+//and performs DES encryption on them. Returns string of ciphertext for the
+//input block of plaintext
+string DESCipher::encrypt(vector<bool> plainTextBits, vector<bool> keyBits)
+{
+  //Output ciphertext to be returned
+  string cipherText;
+
+  //Left half of plaintext
+  vector<bool> leftTextI;
+  //Right half of plainText
+  vector<bool> rightTextI;
+  //Left half of key
+  vector<bool> leftKey;
+  //Right half of key
+  vector<bool> rightKey;
+  //Left half of text to be used next round
+  vector<bool> leftTextIPlus1;
+  //Key after PC-2 table
+  vector<bool> permKey;
+  //Applies IP table to plaintext and splits it into halves
+  initPerm(plainTextBits, leftTextI, rightTextI);
+  //Applies PC-1 table to key and splits it into halves
+  pc1Perm(keyBits, leftKey, rightKey);
+
+  //Loops for the specified number of rounds
+  for (short i = 0; i < ROUND_COUNT; i++)
+  {
+
+    //Sets the left text half for the next round to current right half
+    leftTextIPlus1 = rightTextI;
+    //Right text is permuted and expanded to 48 bits
+    rightTextI = eTablePerm(rightTextI);
+
+    //Applies left shifts to key halves
+    leftKey = leftShiftSched(leftKey, i);
+    rightKey = leftShiftSched(rightKey, i);
+
+    //Applies PC-2 table to the key halves and combines them
+    permKey = pc2Perm(leftKey, rightKey);
+
+    //Applies XOR on each bit of the right text half and the permuted key
+    for (unsigned short j = 0; j < rightTextI.size(); j++)
+    {
+      rightTextI.at(j) = rightTextI.at(j)^permKey.at(j);
+    }
+
+
+    //Applies S boxes to text half
+    rightTextI = sBoxSub(rightTextI);
+
+    //Applies P table to text half
+    rightTextI = pTablePerm(rightTextI);
+
+    //Applies XOR on each bit of the mutated right text half and the left half
+    for (unsigned short j = 0; j < rightTextI.size(); j++)
+    {
+      rightTextI.at(j) = rightTextI.at(j)^leftTextI.at(j);
+    }
+
+    //Sets the left text half for current round to the left half for next round
+    leftTextI = leftTextIPlus1;
+
+  }
+
+  //Applies 32-bit swap to the left and right halves after all rounds
+  rightTextI.insert(rightTextI.end(), leftTextI.begin(), leftTextI.end());
+
+  //Applies inverse IP table to final output ciphertext
+  rightTextI = invInitPerm(rightTextI);
+
+  //Converts binary values back to characters
+  cipherText = bitsToChars(rightTextI);
+
+  return cipherText;
+}
+
+//Takes in a size 64 vector of booleans for both plaintext and the key
+//and performs DES decryption on them. Returns string of plaintext for the
+//input block of ciphertext
+string DESCipher::decrypt(vector<bool> cipherTextBits, vector<bool> keyBits)
+{
+  //Output plaintext to be returned
+  string plainText;
+
+  //Left half of plaintext
+  vector<bool> leftTextI;
+  //Right half of plainText
+  vector<bool> rightTextI;
+  //Left half of key
+  vector<bool> leftKey;
+  //Right half of key
+  vector<bool> rightKey;
+  //Left half of text to be used next round
+  vector<bool> leftTextIPlus1;
+  //Key after PC-2 table
+  vector<bool> permKey;
+  //Applies IP table to plaintext and splits it into halves
+  initPerm(cipherTextBits, leftTextI, rightTextI);
+  //Applies PC-1 table to key and splits it into halves
+  pc1Perm(keyBits, leftKey, rightKey);
+
+  for (short i = ROUND_COUNT - 1; i >= 0; i--)
+  {
+    //Sets the shifted key halves (pre shift) equal to the original halves
+    vector<bool> shiftedLeftKey = leftKey;
+    vector<bool> shiftedRightKey = rightKey;
+
+    //Sets the left text half for the next round to current right half
+    leftTextIPlus1 = rightTextI;
+    //Right text is permuted and expanded to 48 bits
+    rightTextI = eTablePerm(rightTextI);
+
+    //Applies left shifts to key halves
+    for (short j = 0; j <= i; j++)
+    {
+      shiftedLeftKey = leftShiftSched(shiftedLeftKey, j);
+      shiftedRightKey = leftShiftSched(shiftedRightKey, j);
+    }
+
+    //Applies PC-2 table to the key halves and combines them
+    permKey = pc2Perm(shiftedLeftKey, shiftedRightKey);
+
+
+    //Applies XOR on each bit of the right text half and the permuted key
+    for (unsigned short j = 0; j < rightTextI.size(); j++)
+    {
+      rightTextI.at(j) = rightTextI.at(j)^permKey.at(j);
+    }
+    //Applies S boxes to text half
+    rightTextI = sBoxSub(rightTextI);
+    //Applies P table to text half
+    rightTextI = pTablePerm(rightTextI);
+
+    //Applies XOR on each bit of the mutated right text half and the left half
+    for (unsigned short j = 0; j < rightTextI.size(); j++)
+    {
+      rightTextI.at(j) = rightTextI.at(j)^leftTextI.at(j);
+    }
+    //Sets the left text half for current round to the left half for next round
+    leftTextI = leftTextIPlus1;
+  }
+  //Applies 32-bit swap to the left and right halves after all rounds
+  rightTextI.insert(rightTextI.end(), leftTextI.begin(), leftTextI.end());
+  //Applies inverse IP table to final output plaintext
+  rightTextI = invInitPerm(rightTextI);
+
+  //Converts binary values back to characters
+  plainText = bitsToChars(rightTextI);
+  return plainText;
+}
+
+\end{verbatim}
+
+\subsection{server.cpp}
+\begin{verbatim}
+#include <iostream>
+#include <sys/socket.h>
+#include <netinet/in.h>
+#include <unistd.h>
+#include <cstring>
+#include "DESBreakConsts.h"
+#include "pthread_barrier.h"
+using namespace std;
+
+pthread_barrier_t threadBarrier;
+
+struct thread_data
+{
+   int threadId;
+   int clientFileDesc;
+};
+
+void *listenForClient(void * threadArg)
+{
+  struct thread_data *threadData;
+  threadData = (struct thread_data *) threadArg;
+
+  char recMsg[MAX_LINE];
+  int receiveResult = recv(threadData->clientFileDesc, recMsg, MAX_LINE, 0);
+  if (receiveResult == 0)
+  {
+    cout << "No available messages, or connection gracefully closed. " << endl;
+  }
+  else if (receiveResult == -1)
+  {
+    cout << "Error receiving message from client" << threadData->threadId << "." << endl;
+    perror("Receiving message from client failed.");
+    exit(EXIT_FAILURE);
+  }
+  else
+  {
+    cout << "Key found by thread " << threadData->threadId << "!" << endl;
+    cout << "Key: " << recMsg << endl;
+    pthread_barrier_wait(&threadBarrier);
+  }
+  pthread_exit(NULL);
+}
+
+//TODO is a new sockaddr_in required for each connection?
+int main()
+{
+  pthread_barrier_init(&threadBarrier, NULL, 2);
+
+  struct sockaddr_in servAddress;
+  memset(&servAddress, 0, sizeof(servAddress));
+  servAddress.sin_family = AF_INET;
+  servAddress.sin_addr.s_addr = htonl(INADDR_ANY);
+  servAddress.sin_port =  htons(PORT_NO);
+
+  struct sockaddr_in clientAddress;
+  socklen_t clientAddressLen;
+
+  vector<int> serverSockFDs;
+  vector<int> connectSockFDs;
+
+  for (int i = 0; i < CLIENT_COUNT; i++)
+  {
+    // AF_INET = Use IPv4,  SOCK_STREAM = Use TCP
+    int servFileDesc = socket(AF_INET, SOCK_STREAM, 0);
+    if (servFileDesc == -1)
+    {
+      for (int j = 0; j < i; j++)
+      {
+        close(j);
+      }
+      cout << "Issue in starting commmunication with client #" << i << "." <<
+        endl;
+      perror("Server socket descriptor creation failed.");
+      exit(EXIT_FAILURE);
+    }
+
+    /*
+    int reuse = 1;
+    if(setsockopt(servFileDesc, SOL_SOCKET, SO_REUSEADDR, &reuse, sizeof(reuse)) != 0);
+    {
+      perror("Socket option setting failed.");
+      exit(EXIT_FAILURE);
+    }
+    */
+
+    serverSockFDs.push_back(servFileDesc);
+    cout << "Server file descriptor created: " << servFileDesc << endl;
+    for(unsigned int i=0; i< serverSockFDs.size(); i++)
+    {
+      cout << "serverSockFDs.at(" << i << ") : " << serverSockFDs.at(i) << endl;
+    }
+
+    if (::bind(servFileDesc, (struct sockaddr *) &servAddress, sizeof(servAddress)) == -1)
+    {
+      for (int j = 0; j <= i; j++)
+      {
+        close(serverSockFDs.at(j));
+        cout << "Closing... serverSockFDs.at(" << j << ") : " << serverSockFDs.at(j) << endl;
+      }
+      cout << "Issue in binding socket with client #" << i << "." <<
+        endl;
+      perror("Socket binding failed.");
+      exit(EXIT_FAILURE);
+    }
+
+    if(listen(servFileDesc, 1) == -1)
+    {
+      for (int j = 0; j <= i; j++)
+      {
+        close(serverSockFDs.at(j));
+      }
+      cout << "Issue in starting commmunication with client #" << i << "." <<
+        endl;
+      perror("Socket listening failed.");
+      exit(EXIT_FAILURE);
+    }
+
+    clientAddressLen = sizeof(clientAddress);
+    int connectFileDesc = accept(servFileDesc,
+      (struct sockaddr*) &clientAddress, &clientAddressLen);
+
+    connectSockFDs.push_back(connectFileDesc);
+
+    cout << "Connection request received..." << endl;
+    const char* outgoingClientID = to_string(i).c_str();
+    int sendResult = send(connectFileDesc, outgoingClientID,
+      sizeof(outgoingClientID), 0);
+    if (sendResult == -1)
+    {
+      for (int j = 0; j <= i; j++)
+      {
+        close(serverSockFDs.at(j));
+        close(connectSockFDs.at(j));
+      }
+      cout << "Issue in commmunication with client #" << i << "." << endl;
+      perror("Sending Client ID failed.");
+      exit(EXIT_FAILURE);
+    }
+  }
+
+  int listenerThreadCount = connectSockFDs.size();
+  pthread_t threads[listenerThreadCount];
+  struct thread_data threadData[listenerThreadCount];
+
+  // Create a thread that will listen for the result of each client program.
+  for (int i = 0; i < CLIENT_COUNT; i++)
+  {
+    threadData[i].threadId = i;
+    threadData[i].clientFileDesc = connectSockFDs.at(i);
+
+    int resultCode = pthread_create(&threads[i], NULL, listenForClient, (void *)&threadData[i]);
+    if (resultCode)
+    {
+       cout << "Error: unable to create thread, " << resultCode << endl;
+       exit(-1);
+    }
+  }
+
+  pthread_barrier_wait(&threadBarrier);
+  pthread_barrier_destroy(&threadBarrier);
+
+  // If something is recieved, the client found the right key.
+  // Now tell all other clients to stop running.
+  const char* endMessage = "STOP";
+  for (unsigned short i = 0; i < connectSockFDs.size(); i++)
+  {
+    // Stop all Client programs by sending them a message.
+    int sendResult = send(connectSockFDs.at(i), endMessage, sizeof(endMessage), 0);
+    if (sendResult == -1)
+    {
+      for (int j = 0; j <= i; j++)
+      {
+        close(serverSockFDs.at(j));
+        close(connectSockFDs.at(j));
+      }
+      cout << "Issue telling client #" << i << " to stop executing." << endl;
+      perror("Stopping client failed.");
+      exit(EXIT_FAILURE);
+    }
+  }
+
+  for (unsigned int i = 0; i < serverSockFDs.size(); i++)
+  {
+    close(serverSockFDs.at(i));
+    close(connectSockFDs.at(i));
+  }
+  return EXIT_SUCCESS;
+}
+
+\end{verbatim}
+
+
+
+\subsection{client.cpp}
+\begin{verbatim}
+#include <cstring>
+#include <sys/socket.h>
+#include <netinet/in.h>
+#include <unistd.h>
+#include <arpa/inet.h>
+#include <cmath>
+#include <pthread.h>
+#include <iostream>
+#include <fstream>
+#include <bitset>
+#include <limits.h>
+
+#include "DESCipher.h"
+#include "DESBreakConsts.h"
+using namespace std;
+
+const unsigned long TOTAL_KEYS = ULONG_MAX;
+const short NUM_THREADS = 12;
+const int TOTAL_THREADS = NUM_THREADS * CLIENT_COUNT;
+const unsigned long THREAD_KEY_OFFSET = TOTAL_KEYS/TOTAL_THREADS;
+// Have threads explore a few more keys than they're assigned to account for
+// mathematical errors.
+const int BITS_IN_KEY = 64;
+
+struct thread_data
+{
+   int threadId;
+   int clientId;
+   unsigned long startingKeyNum;
+   int cliSockFileDesc;
+   vector<char> cipherText;
+   string plainText;
+};
+
+void *ThreadDecrypt(void *threadArg)
+{
+   struct thread_data *threadData;
+   threadData = (struct thread_data *) threadArg;
+
+   DESCipher cipher;
+   string decryptResults;
+   vector<char> cipherText = threadData->cipherText;
+   vector<bool> keyBits;
+   unsigned int startingKeyNum = threadData->startingKeyNum;
+
+   //Number of character groups that will need to be decrypted
+   short charGroupCount = cipherText.size()/CHARS_IN_BLOCK;
+   unsigned long threadKeyRange;
+
+   if (threadData->clientId == (CLIENT_COUNT - 1) &&
+       threadData->threadId == (NUM_THREADS - 1))
+   {
+      threadKeyRange = ULONG_MAX - startingKeyNum;
+   }
+   else
+   {
+      threadKeyRange = THREAD_KEY_OFFSET;
+   }
+   unsigned long endingKeyNum = startingKeyNum + threadKeyRange;
+   cout << "Client: " << threadData->clientId << endl;
+   cout << "Thread: " << threadData->threadId << endl;
+   cout << "  Key range: " << threadKeyRange << endl;
+   cout << "  Space Min: " << startingKeyNum << endl;
+   cout << "  Space Max: " << endingKeyNum << endl;
+
+   unsigned long currentKey;
+   for (unsigned long i = 0; i < threadKeyRange; i++)
+   {
+      decryptResults = "";
+      currentKey = startingKeyNum + i;
+      //cout << endl << "Thread ID:  " << threadData->threadId << "  " <<
+      //" Starting Key Number : " << startingKeyNum << "    " <<
+      //" Current Key Number : " << startingKeyNum + i << "    " << endl;
+      bitset<BITS_IN_KEY> keyBitset (currentKey);
+      //cout << "keyBits: " << keyBitset << endl;
+      for(short j = BITS_IN_KEY - 1; j >= 0; j--)
+      {
+        keyBits.push_back(keyBitset[j]);
+      }
+
+      for (int j = 0; j < charGroupCount; j++)
+      {
+        //Holds characters of the current group
+        vector<char> curGroupChars;
+        //Current character group represented as bits
+        vector<bool> curCharGroup;
+        //Loads 8 characters into curGroupChars
+        for (short k = 0; k < CHARS_IN_BLOCK; k++)
+        {
+          curGroupChars.push_back(cipherText.at((j*CHARS_IN_BLOCK)+k));
+        }
+        //Converts current group to bit representation
+        curCharGroup = DESCipher::charsToBits(curGroupChars);
+        //Encrypts current group and appends output plaintext to plainText
+
+        decryptResults += cipher.decrypt(curCharGroup, keyBits);
+      }
+      if (decryptResults.compare(threadData->plainText) == 0)
+      {
+        const char* foundKey = to_string(currentKey).c_str();
+        send(threadData->cliSockFileDesc, foundKey, sizeof(foundKey), 0);
+      }
+   }
+   pthread_exit(NULL);
+}
+
+void parentMethod(int clientId, int cliSockFileDesc, vector<char> cipherText,
+                  string plainText)
+{
+   pthread_t threads[NUM_THREADS];
+   struct thread_data threadData[NUM_THREADS];
+
+   // Client gives the ID - the order in which client connected to server
+   // The ID acts as a multiplier(0-11)
+   unsigned long parentKeySpaceStart = (TOTAL_KEYS / CLIENT_COUNT) * clientId;
+   cout << endl << "parentKeySpaceStart:  " << parentKeySpaceStart << endl;
+
+   for( int i = 0; i < NUM_THREADS; i++ )
+   {
+      cout <<"main() : creating thread, " << i << endl;
+      threadData[i].threadId = i;
+      threadData[i].clientId = clientId;
+      threadData[i].startingKeyNum = parentKeySpaceStart + (i * THREAD_KEY_OFFSET);
+      threadData[i].cliSockFileDesc = cliSockFileDesc;
+      threadData[i].cipherText = cipherText;
+      threadData[i].plainText = plainText;
+
+      cout << "i: " << i << "  |  parentKeySpaceStart + " <<
+         "(i * THREAD_KEY_OFFSET): " << parentKeySpaceStart +
+         (i * THREAD_KEY_OFFSET) << endl;
+
+      int resultCode = pthread_create(&threads[i], NULL, ThreadDecrypt, (
+         void *)&threadData[i]);
+
+      if (resultCode)
+      {
+         cout << "Error:unable to create thread," << resultCode << endl;
+         exit(-1);
+      }
+
+   }
+   char recMsg[MAX_LINE];
+   recv(cliSockFileDesc, recMsg, MAX_LINE, 0);
+   cout << recMsg << endl;
+}
+
+vector<char> readInputAsVector(string inFileName)
+{
+  ifstream inTextFileStream;
+  inTextFileStream.open(inFileName, std::ios::binary);
+  //Vector to hold read characters
+  vector<char> readText;
+  //If file was succesfully opened
+  if (inTextFileStream.is_open())
+  {
+    char c;
+    //Pushes current char to readText
+    while (inTextFileStream.get(c))
+    {
+      readText.push_back(c);
+    }
+    inTextFileStream.close();
+    //Gets number of characters that must be padded
+    short charsToPad = CHARS_IN_BLOCK - (readText.size() % CHARS_IN_BLOCK);
+    if (charsToPad != CHARS_IN_BLOCK)
+    {
+      for(short i = 0; i < charsToPad; i++)
+      {
+        readText.push_back('x');
+      }
+    }
+  }
+  //File could not be opened
+  else
+  {
+    cout << "The file " << inFileName << "was not able to be opened." << endl;
+    inTextFileStream.close();
+  }
+  return readText;
+}
+
+string readInputAsString(string inFileName)
+{
+  ifstream inTextFileStream;
+  inTextFileStream.open(inFileName, std::ios::binary);
+  //Vector to hold read characters
+  //string readText;
+  //If file was succesfully opened
+  if (inTextFileStream.is_open())
+  {
+    string readText((istreambuf_iterator<char>(inTextFileStream)),
+                     istreambuf_iterator<char>());
+    inTextFileStream.close();
+    //Gets number of characters that must be padded
+    short charsToPad = CHARS_IN_BLOCK - (readText.size() % CHARS_IN_BLOCK);
+    if (charsToPad != CHARS_IN_BLOCK)
+    {
+      for(short i = 0; i < charsToPad; i++)
+      {
+        readText.push_back('x');
+      }
+    }
+    return readText;
+  }
+  //File could not be opened
+  else
+  {
+    cout << "The file " << inFileName << "was not able to be opened." << endl;
+    inTextFileStream.close();
+    return "File reading failed.";
+  }
+}
+
+int main()
+{
+  string cipherTextFileName = "ct.txt";
+  string plainTextFileName = "pt.txt";
+  vector<char> cipherText = readInputAsVector(cipherTextFileName);
+  string plainText = readInputAsString(plainTextFileName);
+
+  string targetIP;
+  /*ONE MUST BE UNCOMMENTED FOR FUNCTIONING PROGRAM
+  BOTTOM ONE IS FOR LOCALHOST TESTING*/
+  //targetIP = "150.243.146.141";
+  targetIP = "127.0.0.1";
+  int cliSockFileDesc;
+
+  struct sockaddr_in clientAddress;
+  memset(&clientAddress, 0, sizeof(clientAddress));
+  clientAddress.sin_family = AF_INET;
+  clientAddress.sin_addr.s_addr = inet_addr(targetIP.c_str());
+  clientAddress.sin_port =  htons(PORT_NO);
+  char recMsg[MAX_LINE];
+  int clientId;
+
+  // AF_INET = Use IPv4,  SOCK_STREAM = Use TCP
+  cliSockFileDesc = socket(AF_INET, SOCK_STREAM, 0);
+  if (cliSockFileDesc == -1)
+  {
+    perror("Socket descriptor creation failed.");
+    exit(EXIT_FAILURE);
+  }
+
+  //Connection of the client to the socket
+  if (connect(cliSockFileDesc, (struct sockaddr *) &clientAddress,
+    sizeof(clientAddress)) == -1)
+  {
+    close(cliSockFileDesc);
+    perror("Problem in connecting to the server");
+    exit(EXIT_FAILURE);
+  }
+
+  int receiveResult = recv(cliSockFileDesc, recMsg, MAX_LINE, 0);
+  if (receiveResult == 0)
+  {
+    cout << "No available messages, or connection gracefully closed. " << endl;
+  }
+  else if (receiveResult == -1)
+  {
+    perror("Receiving message failed.");
+    exit(EXIT_FAILURE);
+  }
+  else
+  {
+    clientId = atoi(recMsg);
+    parentMethod(clientId, cliSockFileDesc, cipherText, plainText);
+  }
+
+  close(cliSockFileDesc);
+  return EXIT_SUCCESS;
+}
 
 \end{verbatim}
 \end{document}
